--- a/Editor/com.anydog.levelsystem.editor.asmdef
+++ b/Editor/com.anydog.levelsystem.editor.asmdef
@@ -4,7 +4,9 @@
     "references": [
         "GUID:872721cfb01c9cc48ab7d452a82d2158"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
